--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
         <div class="top-banner__content">
           <p class="top-banner__title bold">
             <!-- 띄어쓰기 포함 최대17자 -->
-            프론트엔드를 대표하는
+            단 1분으로
             <br />
             <!-- 띄어쓰기 포함 최대17자 -->
-            라이브러리, 리액트.
+            시작되는 설레임
           </p>
           <p class="top-banner__subtitle regular">
             <!-- 띄어쓰기 포함 27자 -->
-            리액트 스쿨과 함께라면
+            서프미와 함께라면
           </p>
           <a href="https://projectlion.io/">
             <div class="top-banner__cta-button center bold">
               <!-- 띄어쓰기 포함 16자 -->
-              스쿨 신청 상담받기
+              여행 시작하기
             </div>
           </a>
         </div>
